...
     }
     
     override func tableView(_ tableView: UITableView, titleForHeaderInSection section: Int) -> String? {
          if section == 0 {
               return "Streaming"
          } else {
               return "Download"
          }
     }
     
     override func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
          return FPSListManager.sharedManager.numberOfContent(section: section)
     }
...
                              // you have to connect on the online for the content download.
                              if (Recharbility.isConnectedToNetwork()) {
                                   SDKManager.sharedManager.downloadStream(for: fpsContent)
                                   
                              } else {
                                   let alert = UIAlertController(title: "Download Failed", message: "network connect failed", preferredStyle: .alert)
                                   alert.addAction(UIAlertAction(title: "Ok", style: .default, handler: nil))
                                   self.present(alert, animated: true)
                              }
                         }
                         
                         alertAction2 = UIAlertAction(title: "Cancel", style: .default) { _ in
                              SDKManager.sharedManager.cancelDownload(for: fpsContent)
...
                                   let alert = UIAlertController(title: "Download Failed", message: "network connect failed", preferredStyle: .alert)
                                   alert.addAction(UIAlertAction(title: "Ok", style: .default, handler: nil))
                                   self.present(alert, animated: true)
                              }
                         }
                    case .downloading:
                         alertAction = UIAlertAction(title: "Pause", style: .default) { _ in
                              SDKManager.sharedManager.pauseDownload(for: fpsContent)
                         }
                    case .downloaded:
                         alertAction = UIAlertAction(title: "Delete", style: .default) { _ in
                              SDKManager.sharedManager.deleteFPSContent(for: fpsContent)
                         }
                    }
                    
                    let alertRemoveLicenseAction = UIAlertAction(title: "Remove License", style: .default) { _ in
                         SDKManager.sharedManager.doverunnerSdk?.deleteLicense(ContentId: fpsContent.contentId)
                    }
                    
                    let alertExistLicenseAction = UIAlertAction(title: "Exsit License", style: .default) { _ in
                         var message: String = String()
                         if let expire_date = SDKManager.sharedManager.doverunnerSdk?.getOfflineLicenseExpiryDate(find: fpsContent.contentId) {
...
                    return
               }
               
               if let contentURL = fpsContent.urlAsset.url.absoluteURL.scheme, contentURL.hasPrefix("http")  {
                    // you have to connect on the online for the streaming content play.
                    if (Recharbility.isConnectedToNetwork() == false) {
                         let alert = UIAlertController(title: "Play Failed", message: "network connect failed", preferredStyle: .alert)
                         alert.addAction(UIAlertAction(title: "Ok", style: .default, handler: { Void in
                              self.tableView.reloadData()
                         }))
                         self.present(alert, animated: true)
                         return
                    }
...
