...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="ot6-43-o4u" id="Jpk-t2-FA6"/>
                            <outlet property="delegate" destination="ot6-43-o4u" id="qRq-LE-Cog"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Basic Sample" id="n2H-1C-FTa"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="5bJ-kh-mZo" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-164" y="-1512"/>
        </scene>
        <!--Navigation Controller-->
...
