...
            Text("Version: \(packInfo.version)")
                .font(.caption)
                .foregroundColor(.primary)
            
            // Video Tracks information
            if let videoTracks = packInfo.tracks.video, !videoTracks.isEmpty {
                tracksSection(title: "Video", tracks: videoTracks) { track, index in
                    VideoTrackView(track: track, index: index)
                }
            }
            
            // Audio Tracks information
            if let audioTracks = packInfo.tracks.audio, !audioTracks.isEmpty {
...
